--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*index*/
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -72,4 +73,85 @@ body {
 
 .delete-button:hover {
     background-color: #e60000;
+}
+
+/*settings*/
+/* General styles for the settings page */
+.container {
+    padding: 20px;
+    background-color: #a5d6a7;
+    border-radius: 8px;
+}
+
+.section {
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h3 {
+    color: #388e3c;
+}
+
+.input-field {
+    padding: 8px;
+    font-size: 16px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.button {
+    background-color: #388e3c;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.button:hover {
+    background-color: #2c6b2f;
+}
+
+label {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+input[type="checkbox"] {
+    margin-top: 10px;
+}
+
+/*help*/
+textarea {
+    width: 100%;
+    height: 150px;
+    margin-bottom: 15px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    resize: none;
+}
+
+/*resources*/
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    margin-bottom: 8px;
+}
+
+ul li a {
+    text-decoration: none;
+    color: #1976D2;
+}
+
+ul li a:hover {
+    text-decoration: underline;
 }
